--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-pos",
+  "name": "sanctum",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,12 +7,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
-    "cookie": "^0.4.1",
-    "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router": "^6.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^6.0.2",
+    "react-sanctum": "^2.1.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -39,6 +38,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
