feat : add supplier update and delete

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV=local
 REACT_APP_BASE_URL="http://localhost:8080"
 REACT_APP_SANCTUM_CSRF_ROUTE="sanctum/csrf-cookie"
-REACT_APP_SANCTUM_USER_ROUTE="api/user"
+REACT_APP_SANCTUM_USER_ROUTE="api/me"
 REACT_APP_SANCTUM_LOGIN_ROUTE="login"
 REACT_APP_SANCTUM_LOGOUT_ROUTE="logout"
